# COMP_ARCH_P1

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
imtool-aos/: CMakeLists.txt  imtool-aos.cpp
imtool-soa/: CMakeLists.txt  imtool-soa.cpp
input/: deer-large-missing.txt
libraries/: CMakeLists.txt
libraries/common/: CMakeLists.txt  b_tree.cpp  b_tree.hpp  binaryio.cpp  binaryio.hpp  calcular_prox_euclideo.cpp  calcular_prox_euclideo.hpp  progargs.cpp  progargs.hpp
libraries/imgaos/: imageaos.cpp  imageaos.hpp
libraries/imgsoa/: CMakeLists.txt  imagesoa.cpp  imagesoa.hpp
tests/: CMakeLists.txt
tests/ftest-aos/: CMakeLists.txt
tests/ftest-soa/: CMakeLists.txt
tests/utest-common/: CMakeLists.txt  utest-common.cpp
tests/utest-imgaos/: CMakeLists.txt  utest-imgaos.cpp
tests/utest-imgsoa/: CMakeLists.txt  utest-imgsoa.cpp
